[package]
name = "node"
version = "0.1.0"
authors = ["Kent <utterback.kent.a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "*"
serde = "*"
serde_json = "*"
env_logger = "*"
cert_gen = {path = "../../cert_gen"}